# C2Safari

./: README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml
c2safari/: c2safari_program.py  c2safari_queries.py  secrets.py
tests/: test_c2safari.py
