[tool.poetry]
name = "c2safari"
version = "0.1.0"
description = "Use Shodan API to search for possible C2 infrastructure with hardcoded queries"
authors = ["Mike R <cr8syoki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
shodan = "^1.25.0"
prompt-toolkit = "^3.0.19"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
